<resources>
    <string name="app_name">grouplab</string>
    <string name="nutritrack">NutriTrack</string>
    <string-array name="titles_array">
        <item>Mr.</item>
        <item>Ms.</item>
        <item>Mrs.</item>
        <item>Dr.</item>
    </string-array>
    <string name="login_button">Login</string>
    <string name="register_button">Register</string>
    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="register">Create New Account</string>
    <string name="confirm_password_hint">Confirm Password</string>
    <string name="set_goal">Set New Goal</string>
    <string name="current_weight">Current Weight</string>
    <string name="goal_weight">Weight Goal</string>
    <string name="weight_unit">lbs</string>
    <string name="calorie_recommend">Recommended Calories</string>
    <string name="calorie_unit">kCal/day</string>
    <string name="calorie_edit">Tap to Edit Calories</string>
    <string name="create_account">Create Account</string>
    <string name="days_goal">Goal Date</string>
    <string name="activity_level">Select Activity Level</string>
    <string name="confirm_goal">Confirm Goal</string>
    <string name="bluetooth">Bluetooth</string>
    <string name="appearance">Appearance</string>
    <string name="accountSetting">Account Setting</string>
    <string name="yourGoals">Your Goals</string>
    <string name="about">About</string>
    <string name="circle">Circle</string>
    <string name="protein_num">20g\nProtein</string>
    <string name="carbs_num">20.0g\nCarbs</string>
    <string name="fat_num">20.0g\nFats</string>
    <string name="food_name_hint">Food Name</string>
    <string name="calories_hint">Calories</string>
    <string name="protein_hint">Protein</string>
    <string name="carbs_hint">Carbohydrates</string>
    <string name="sat_fat_hint">Saturated Fat</string>
    <string name="fat_hint">Fat</string>
    <string name="trans_hint">Trans Fat</string>
    <string name="poly_fat_hint">Polyunsaturated Fat</string>
    <string name="mono_fat_hint">Monounsaturated Fat</string>
    <string name="cholesterol_hint">Cholesterol</string>
    <string name="sodium_hint">Sodium</string>
    <string name="potassium_hint">Potassium</string>
    <string name="fiber_hint">Fiber</string>
    <string name="sugar_hint">Sugar</string>
    <string name="vitamina_hint">Vitamin A</string>
    <string name="vitaminb_hint">Vitamin B</string>
    <string name="vitaminc_hint">Vitamin C</string>
    <string name="vitamind_hint">Vitamin D</string>
    <string name="calcium_hint">Calcium</string>
    <string name="iron_hint">Iron</string>
    <string name="mg_unit">mg</string>
    <string name="g_unit">g</string>
    <string name="kcal_unit">kCal</string>
    <string name="food_nutrition">Food Nutrition Data</string>
    <string name="add_food">Add Food</string>
    <string name="app_database">appDatabase</string>
    <string name="database_add_food">Add food from Database</string>
    <string name="add_new_food">Add Food to Database</string>
    <string name="step_goal">Steps: %1$d / %2$d</string>
    <string name="steps_calories_burned">Calories Burned: %1$d kCal</string>
    <string name="goal_steps_hint">Steps Goal</string>
    <string name="total_calories_burned">Total Calories Burned: %1$d kCal</string>
    <string name="exercise_time_hint">Enter time spent (minutes)</string>
    <string name="confirm_add_exercise">Confirm</string>
    <string name="recommendation_title">Today\'s Recommendations</string>
    <string name="scan_food_barcode">Add Food With Barcode</string>
    <string name="review">Nutrition Review</string>

</resources>