<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:id="@+id/bluetooth"
        android:icon="@drawable/ic_bluetooth"
        android:title="@string/bluetooth"
        />

    <item android:id="@+id/appearance"
        android:icon="@drawable/ic_appearance"
        android:title="@string/appearance"
        />

    <item android:id="@+id/accountSetting"
        android:icon="@drawable/ic_account_setting"
        android:title="@string/accountSetting"
        />

    <item android:id="@+id/yourGoals"
        android:icon="@drawable/ic_your_goals"
        android:title="@string/yourGoals"
        />

    <item android:id="@+id/about"
        android:icon="@drawable/ic_about"
        android:title="@string/about"
        />
    <item
        android:id="@+id/logout"
        android:icon="@drawable/baseline_logout_24"
        android:title="Logout"
        />
</menu>