<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/project_background"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/nutriTrack"
        android:layout_width="wrap_content"
        android:layout_height="180dp"
        android:fontFamily="sans-serif-black"
        android:gravity="center_horizontal"
        android:text="@string/nutritrack"
        android:textColor="@color/white"
        android:textSize="75sp" />

    <EditText
        android:id="@+id/usernameEditText"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:height="48dp"
        android:fontFamily="@font/montserrat_semibold"
        android:autofillHints="username"
        android:backgroundTint="@color/project_accent"
        android:ems="10"
        android:gravity="center_horizontal"
        android:hint="@string/username_hint"
        android:inputType="text"
        android:textColor="@color/white"
        android:textColorHint="@color/project_hint" />

    <EditText
        android:id="@+id/passwordEditText"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/montserrat_semibold"
        android:height="48dp"
        android:autofillHints="password"
        android:backgroundTint="@color/project_accent"
        android:ems="10"
        android:gravity="center_horizontal"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        android:textColor="@color/white"
        android:textColorHint="@color/project_hint" />

    <Button
        android:id="@+id/signin_button"
        android:layout_width="280dp"
        android:layout_height="70dp"
        android:layout_marginTop="24dp"
        android:backgroundTint="@color/project_accent"
        android:fontFamily="@font/montserrat_semibold"
        android:gravity="center"
        android:text="@string/login_button"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <Button
        android:id="@+id/register_button"
        android:layout_width="280dp"
        android:layout_height="70dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="#B7EDB3"
        android:fontFamily="@font/montserrat_semibold"
        android:gravity="center"
        android:text="@string/register_button"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="20sp" />
</LinearLayout>
