<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/project_background"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="16dp">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/project_background"
        android:paddingTop="30dp"
        android:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/project_background"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/registerTitle"
            android:layout_width="wrap_content"
            android:layout_height="170dp"
            android:fontFamily="sans-serif-black"
            android:gravity="center_horizontal"
            android:text="@string/register"
            android:textColor="@color/white"
            android:textSize="50sp" />

        <EditText
            android:id="@+id/usernameEditText"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_marginTop="16dp"
            android:backgroundTint="@color/project_accent"
            android:ems="10"
            android:gravity="center_horizontal"
            android:fontFamily="@font/montserrat_semibold"
            android:hint="@string/username_hint"
            android:inputType="text"
            android:textColor="@color/white"
            android:textColorHint="@color/project_hint" />

        <EditText
            android:id="@+id/passwordEditText"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_marginTop="16dp"
            android:backgroundTint="@color/project_accent"
            android:ems="10"
            android:gravity="center_horizontal"
            android:fontFamily="@font/montserrat_semibold"
            android:hint="@string/password_hint"
            android:inputType="textPassword"
            android:textColor="@color/white"
            android:textColorHint="@color/project_hint" />

        <EditText
            android:id="@+id/confirmPasswordEditText"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_marginTop="16dp"
            android:backgroundTint="@color/project_accent"
            android:ems="10"
            android:fontFamily="@font/montserrat_semibold"
            android:gravity="center_horizontal"
            android:hint="@string/confirm_password_hint"
            android:inputType="textPassword"
            android:textColor="@color/white"
            android:textColorHint="@color/project_hint" />

        <Button
            android:id="@+id/registerButton"
            android:layout_width="280dp"
            android:layout_height="70dp"
            android:layout_marginTop="24dp"
            android:backgroundTint="#B7EDB3"
            android:fontFamily="@font/montserrat_semibold"
            android:gravity="center"
            android:text="@string/create_account"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="20sp" />

    </LinearLayout>

</LinearLayout>
