<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/drawerLayout"
    android:background="@color/project_background">

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/fragment_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintTop_toBottomOf="@id/settingButton"
        app:layout_constraintBottom_toTopOf="@id/bottom_navigation" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/settingButton"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginTop="36dp"
            android:layout_marginEnd="16dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_settings"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="@color/white" />

        <com.github.mikephil.charting.charts.PieChart
            android:id="@+id/chart"
            android:layout_width="408dp"
            android:layout_height="256dp"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@id/settingButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5" />

        <TextView
            android:id="@+id/calorie_num"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:fontFamily="@font/montserrat_semibold"
            android:text="2000\/2000 kCal"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:gravity="center"
            app:layout_constraintBottom_toTopOf="@id/linearLayout7"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/chart" />

        <LinearLayout
            android:id="@+id/linearLayout7"
            android:layout_width="219dp"
            android:layout_height="42dp"
            android:layout_marginTop="50dp"
            android:background="@drawable/powder_blue_rounded_corners"
            android:orientation="horizontal"
            android:gravity="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/chart">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:contentDescription="@string/circle"
                android:src="@drawable/ic_yellow_circle"
                android:layout_gravity="center" />

            <TextView
                android:id="@+id/protein_num"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/protein_num"
                android:textColor="@color/white"
                android:gravity="center_vertical"
                android:layout_gravity="center" />

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:contentDescription="@string/circle"
                android:src="@drawable/ic_orange_circle"
                android:layout_gravity="center" />

            <TextView
                android:id="@+id/acrbs_num"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/carbs_num"
                android:textColor="@color/white"
                android:gravity="center_vertical"
                android:layout_gravity="center" />

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:contentDescription="@string/circle"
                android:src="@drawable/ic_blue_circle"
                android:layout_gravity="center" />

            <TextView
                android:id="@+id/fat_num"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/fat_num"
                android:textColor="@color/white"
                android:gravity="center_vertical"
                android:layout_gravity="center" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/steps_layout"
            android:layout_width="219dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="60dp"
            android:layout_marginTop="8dp"
            android:layout_marginRight="60dp"
            android:background="@drawable/gray_rounded_corners"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/linearLayout7">

            <TextView
                android:id="@+id/steps_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/montserrat_semibold"
                android:text="Steps: 0/10000"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <ProgressBar
                android:id="@+id/steps_progress_bar"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="match_parent"
                android:layout_height="8dp"
                android:layout_marginTop="8dp"
                android:progress="0"
                android:progressDrawable="@drawable/blue_rounded_corners" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/recommendation_layout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="16dp"
            android:background="@drawable/gray_rounded_corners"
            android:orientation="vertical"
            android:padding="16dp"
            app:layout_constraintTop_toBottomOf="@id/steps_layout"
            app:layout_constraintBottom_toTopOf="@id/bottom_navigation"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <TextView
                android:id="@+id/recommendation_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/recommendation_title"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:fontFamily="@font/montserrat_semibold"
                android:layout_gravity="center" />

            <androidx.core.widget.NestedScrollView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:fillViewport="true"
                android:overScrollMode="never">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recommendation_recycler_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:scrollbars="vertical" />
            </androidx.core.widget.NestedScrollView>
        </LinearLayout>

        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:id="@+id/bottom_navigation"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@color/project_background"
            app:backgroundTint="@color/project_sub"
            app:itemIconSize="42dp"
            app:itemIconTint="@color/project_accent"
            app:itemRippleColor="@color/project_hint"
            app:itemTextColor="@color/project_accent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:menu="@menu/bottom_nav_menu" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navigationView"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:menu="@menu/navigation_menu"
        app:itemIconSize="40dp" />

</androidx.drawerlayout.widget.DrawerLayout>
